client/src/components/Home.scss
@import "node_modules/bootstrap/scss/functions";
@import "node_modules/bootstrap/scss/variables";
@import "node_modules/bootstrap/scss/mixins/_breakpoints"; 

// @include media-breakpoint-up(sm) { ... }
// @include media-breakpoint-up(md) { ... }
// @include media-breakpoint-up(lg) { ... }

.cta {
    position: relative;
    height: 410px;
    background:#FFDEC2;
    display: flex;
    padding: 50px;
    width: 110%;
    right: 5%;
    
    .cta-text {
        display:flex;
        flex-direction: column;

        h2 { 
        color: #494949;
        line-height: 3.5rem;
        font-size: 2.5rem;
        margin: 30px 100px;
        }

        .btn {
            margin: 0 100px;
            width: 130px;
            background: white;
            color: #FF851A;
            border: 1px solid #FF851A;
            font-size: 1.2rem;
            padding: 5px 15px;
        }
    }
    
    .cta-img {
        width: 60%;
        padding-right: 90px;
        img {
            width:80%;
        }
    }
    
    @include media-breakpoint-down(md) { 
        height: 410px;
        background:#FFDEC2;
        display: flex;
        padding: 10px;
        width: 110%;
        overflow: hidden;
        
        .cta-text {
            display:flex;
            flex-direction: column;
            width: 100%;
            margin: 0;

            h2 {
                width: 70%;
                color: #494949;
                line-height: 3.5rem;
                font-size: 2rem;
                margin: 30px 100px;
            }
            .btn {
                margin: 0 100px;
                width: 130px;
                background: white;
                color: #FF851A;
                border: 1px solid #FF851A;
                font-size: 1.2rem;
                padding: 5px 15px;
            }
        }
    }
     
    @include media-breakpoint-down(sm) { 
        width: 120%;
        right: 10%;
        .cta-img{
            height: 100%;
            display: none;
        }
    }
}


h2.posts-head {
    margin: 55px 30px 20px;
    cursor: pointer;
    font-size: 2.5rem;
    @media (max-width: 430px) {
        font-size: 2rem;
      }
      @media (max-width: 380px) {
       
      }
      @media (max-width: 325px) {
        font-size: 1.6rem;
      }
}
.post-list {
 
    display: grid;

    @include media-breakpoint-up(lg) {
        grid-template-columns: 1fr 1fr 1fr;
    }
    @include media-breakpoint-down(med) {
        grid-template-columns: 1fr 1fr;
    }
    @include media-breakpoint-down(sm) {
        grid-template-columns: 1fr 1fr;
    }
    @media (max-width: 430px) {
        grid-template-columns: 1fr;
    }
}

.card.display-posts {
    box-shadow: 0 1px 4px 0 rgba(0,0,0,0.4);
    border-top-left-radius: 10px;
    border-top-right-radius: 10px;
    overflow: hidden;
    color: gray;
    :hover {
        cursor: pointer
    }
    .card-header {
        border-bottom: none;
        background: none;
        padding:0 0 0 15px;
        max-height: 72px;
        height: 72px;
    }
    .card-body {
        padding:0 0 0 15px;
        display:flex;
        flex-wrap: nowrap;
        flex-direction: row;
        justify-content: flex-start;
        align-items: baseline;
        .dv-star-rating-star {
            margin: 0;
            height: 20px;
        }
        .review-count {
            margin-top: 12px;
            font-size: 1rem;
            color: gray;
        }
        .post-footer {
            display: flex;
            font-size: 1rem;
            padding-bottom: 12px;
            margin-top: 10px;
            .date-count {
                font-size: 1rem;
                color: gray;
            }
        }
    }
    .card-img {
        height: 240px;
        width: 300%;
        background: #FFDEC2
    }
    .post-stars {
        justify-self: flex-start;
        align-self: flex-start;
    }

}
.posts-section {

    .posts-button {
        float: right;
        text-align: right;
        margin: 0;
        margin-right: 6%;
        color: #FF851A;
        @media (max-width: 430px) {
            font-size: 1.2rem;
          }
          @media (max-width: 380px) {
            // font-size: 1.1rem;
          }
          @media (max-width: 325px) {
    
          }
    }
}

